sfdx-source/apex-di/main/objects/DI_Provider__mdt/DI_Provider__mdt.object-meta.xml
<CustomObject>
    <description>Defines a dependency injection provider binding. Records of this type allow for configuring service implementations, values, or factories without changing Apex code.</description>
    <label>DI Provider</label>
    <pluralLabel>DI Providers</pluralLabel>
</CustomObject>