sfdx-source/apex-di/main/objects/DI_Provider__mdt/fields/Args__c.field-meta.xml
<CustomField>
    <description>A string of arguments to be passed to the newInstance method of a Factory provider. This allows for dynamic, metadata-driven configuration of factories.</description>
    <fullName>Args__c</fullName>
    <label>Args</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>