sfdx-source/apex-di/main/objects/DI_Provider__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional documentation describing the purpose of this metadata-backed provider configuration.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>