sfdx-source/apex-di/main/objects/DI_Provider__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this provider definition will be used by the DI framework.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>