sfdx-source/apex-di/main/objects/DI_Provider__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>(Optional) The lifetime of the provider.</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SINGLETON</fullName>
            </value>
            <value>
                <fullName>PROTOTYPE</fullName>
            </value>
            <value>
                <fullName>SCOPED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>