sfdx-source/apex-di/main/objects/DI_Provider__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Defines the kind of provider</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>