sfdx-source/apex-di/main/objects/DI_Provider__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value for the provider. Its meaning depends on the Type__c:
- Class: The full Apex class name of the implementation (e.g., LiveEmailService).
- Value: The literal string value.
- Factory: The full Apex class name of the factory.
- Existing: The token of another provider to alias.</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>